--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}"/>
 	<title>GTCC</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css">
@@ -293,18 +294,31 @@
 						<div class="pdf" style='background-color: #eceff5; padding: 1em;border-radius: 5px !important;text-align: center !important;'>
 							<h5 style="text-align: left !important;">Gerar PDF</h5>
 							<form action="" style="text-align: left !important;padding: 0 .5em !important;">
-								<input type="checkbox" name="edital" id="edital" value="">
-								<label for="edital">Edital de Defesa</label><br>
-								<input type="checkbox" name="ataDefesa" id="ataDefesa" value="" class="ataDefesa">
-								<label for="">Ata de Defesa</label><br>
-								<select style="margin: 0 1em !important; width: 85%;" name="Options" id="Options" class="Options"
-									aria-placeholder="Todos">
-									<option value="opt">Todas</option>
+								
+							<div class="form-group offset-md-2 offset-sm-1">
+							<div class="form-check row">
+								<input class="form-check-input" type="radio" name="options"
+									id="edital" value="1"> <label
+									class="form-check-label" for="avaliacao1"> Edital de defesa
+								</label>
+							</div>
+							<div class="form-check row">
+								<input class="form-check-input" type="radio" name="options"
+									id="ataDefesa" value="2"> 
+									<label class="form-check-label" for="avaliacao2"> Ata de defesa</label>
+									
+							</div>
+						</div>
+						<select style="margin: 0 1em !important; width: 85%;" name="select" id="selectAta"
+									aria-placeholder="Todos" disabled>
+									<option value="0">Todas</option>
 									<option th:each="agendamento : ${agendamentos}" 
 										th:value="${agendamento.id}"
 										th:text="${agendamento.fichaIdentificacao.aluno.nome}"></option>
 								</select>
 							</form>
+							
+							
 
 							<button style="margin-top: 1em !important;border: none !important;padding: .5em 2em !important;text-transform: uppercase !important;"
 								type="button" class="btn btn-success">Gerar</button>
@@ -359,21 +373,13 @@
 				</div>
 			</div>
 		</div>
-		<script th:inline="javascript">
-		$(document).on('click','.ataDefesa',function() {
-			  $('.Options').attr('disabled', 'disabled');
-
-			  var $checkBox = $('.ataDefesa');
-
-			  var $select = $(this).prev();
-			    
-			    if (this.checked) {
-			      $select.removeAttr('disabled');
-			    } else {
-			      $select.attr('disabled', 'disabled');
-			    }
-
+		<script type="text/javascript">
+			$(document).on('change','[id=ataDefesa]',function(){
+			   $('[name=select]').prop('disabled',!this.checked);
 			});
+			$(document).on('change','[id=edital]',function(){
+				   $('[name=select]').prop('disabled',this.checked);
+				});
 </script>
 	</section>
 </body>
