--- a/src/main/resources/templates/agendamentodefesa/visualizarDefesa.html
+++ b/src/main/resources/templates/agendamentodefesa/visualizarDefesa.html
@@ -71,6 +71,38 @@
 	          </div>
 	        </div>
 	        </div>
+	        <div class="pdf" style='background-color: #eceff5; padding: 1em;border-radius: 5px !important;text-align: center !important;'>
+							<h5 style="text-align: left !important;">Gerar PDF</h5>
+							<form action="" style="text-align: left !important;padding: 0 .5em !important;">
+								
+							<div class="form-group offset-md-2 offset-sm-1">
+							<div class="form-check row">
+								<input class="form-check-input" type="radio" name="options"
+									id="edital" value="1"> <label
+									class="form-check-label" for="avaliacao1"> Edital de defesa
+								</label>
+							</div>
+							<div class="form-check row">
+								<input class="form-check-input" type="radio" name="options"
+									id="ataDefesa" value="2"> 
+									<label class="form-check-label" for="avaliacao2"> Ata de defesa</label>
+									
+							</div>
+						</div>
+						<select style="margin: 0 1em !important; width: 85%;" name="select" id="selectAta"
+									aria-placeholder="Todos" disabled>
+									<option value="0">Todas</option>
+									<option th:each="agendamento : ${agendamentos}" 
+										th:value="${agendamento.id}"
+										th:text="${agendamento.fichaIdentificacao.aluno.nome}"></option>
+								</select>
+							</form>
+							
+							
+
+							<button style="margin-top: 1em !important;border: none !important;padding: .5em 2em !important;text-transform: uppercase !important;"
+								type="button" class="btn btn-success">Gerar</button>
+						</div>
 	      </div>
 	      	<div class="jumbotron col-lg-9" style="width:100%;">
 					<div class="row justify-content-center">
@@ -83,7 +115,7 @@
 				<tbody>
                     <tr>
 						<th class="text" width="50%">Nome do aluno:</th>
-						<td style="text-align:left !important;" th:text="*{fichaIdentificacao.aluno.nome}"></td>
+						<td th:text="*{fichaIdentificacao.aluno.nome}"></td>
                     </tr>
                     <tr>
 						<th class="text" width="50%">Título do trabalho:</th>
@@ -131,6 +163,15 @@
 		</div>
 	</div>
 	</div>
+	</div>
+	<script type="text/javascript">
+			$(document).on('change','[id=ataDefesa]',function(){
+			   $('[name=select]').prop('disabled',!this.checked);
+			});
+			$(document).on('change','[id=edital]',function(){
+				   $('[name=select]').prop('disabled',this.checked);
+				});
+</script>
 	</section>
 </body>
 
