--- a/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
@@ -11,14 +11,19 @@
      <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <link href="webjars/bootstrap/4.0.0/css/bootstrap.min.css"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css">
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="main.css">
+	<link href="webjars/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="../../static/js/jquery_mask/jquery.mask.js"></script>   
     <script src="../../static/js/jquery_mask/jquery.mask.min.js"></script>  
 	<script src="webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}" />
     <title>GTCC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <script>
+    <script>
 		document.addEventListener('DOMContentLoaded', function () {
 			(function () {
 				var just_stop;
@@ -52,7 +57,7 @@
 
 			}).call(this);
 		}, false);
-	</script> -->
+	</script>
 </head>     
 
 <body>
