--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -17,8 +17,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 	<script src="webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 
-	<!-- <script>
+	<script>
 		document.addEventListener('DOMContentLoaded', function () {
 			(function () {
 				var just_stop;
@@ -52,7 +53,7 @@
 
 			}).call(this);
 		}, false);
-	</script>-->
+	</script>
 
 </head>
 
@@ -280,17 +281,23 @@
 </style>
 
 <body>
-	<section layout:fragment="content">
+	<section class="main-content" layout:fragment="content">
 		<div id="wrap" class="container">
 			<div class="defesa container" style="width: 100% !important;background-color:#e5e5e5;box-sizing:border-box !important; padding: 2em; 	">
 				<h3 style="text-align: center !important;font-size: 2em !important;margin: 1em auto 1em !important;box-sizing:border-box !important;">Agendamento de defesas</h3>
 				<div class="row">
 					<div class="col-lg-3" style="width: 100%;">
 
-						<div class="calendar">
-							<div id="datepicker"></div>
-							<div class="container" id="main"></div>
-						</div>
+						<div class="jumbotron">
+	        <div class="row justify-content-center">
+	          <h5>Calendário</h5>
+				<div id="datepicker"></div>
+	          <div class="container" id="main">
+	            
+	          </div>
+	        </div>
+	        </div>
+	         
 						<div class="pdf" style='background-color: #eceff5; padding: 1em;border-radius: 5px !important;text-align: center !important;'>
 							<h5 style="text-align: left !important;">Gerar PDF</h5>
 							<form action="" style="text-align: left !important;padding: 0 .5em !important;">
@@ -324,7 +331,7 @@
 								type="button" class="btn btn-success">Gerar</button>
 						</div>
 					</div>
-					<div class="col-lg-9 defesas-detalhe" style="box-sizing:border-box !important; background-color: #eceff5 !important;padding: 2em 1em !important;border-radius: 5px !important;width: 100% !important;">
+					<div class="jumbotron col-lg-9 defesas-detalhe" style="box-sizing:border-box !important; background-color: #eceff5 !important;padding: 2em 1em !important;border-radius: 5px !important;width: 100% !important;">
 						<h5 style="font-size: 1.5em !important;padding-bottom: .5em !important;">Próximas defesas</h5>
 						<table id="tabela_defesas" class="table table-hover table-striped table-bordered table-click" style="display: flex !important;align-items: center !important;width: 100% !important;flex-direction:column;">
 
@@ -371,8 +378,8 @@
 						</div>
 					</div>
 				</div>
+				</div>
 			</div>
-		</div>
 		<script type="text/javascript">
 			$(document).on('change','[id=ataDefesa]',function(){
 			   $('[name=select]').prop('disabled',!this.checked);
