style: Arrumando estilização de telas de agendamento

--- a/src/main/resources/templates/agendamentodefesa/defesaCreate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaCreate.html
@@ -62,14 +62,14 @@
 
 <body>
 	<section class="main-content"  layout:fragment="content">
-		<div id="wrap" class="container">
-			<div class="defesa container" style="width: 100% !important;background-color:#e5e5e5;box-sizing:border-box !important; padding: 2em; ">
+		<div id="wrap" class="container" style="max-width: 1600px !important;">
+			<div class="defesa container" style="max-width: 1600px !important; background-color:#e5e5e5;box-sizing:border-box !important; padding: 2em; ">
 				<h3 style="text-align: center !important;font-size: 2em !important;margin: 1em auto 1em !important;box-sizing:border-box !important;">Agendamento de defesas</h3>
 	    	<div class="row">
 	      <div class="col-lg-3" style="width: 100%;">
 			<div class="jumbotron">
 	        <div class="row justify-content-center">
-	          <h5>Calendário</h5>
+	          <h5 style="text-align: left !important; margin: 0px !important; padding-top: 0px !important; padding-bottom:1em; font-size:1.25em;">Calendário</h5>
 				<div id="datepicker"></div>
 	          <div class="container" id="main">
 	            
