Fix: Modal de confirmação de exclusão

--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -283,12 +283,15 @@
 										th:value="${agendamento.id}"
 										th:text="${agendamento.fichaIdentificacao.aluno.nome}"></option>
 								</select>
+								<div style='padding: 1em;border-radius: 5px !important;text-align: center !important;'> 
+								<button style="margin-top: 1em !important;border: none !important;padding: .5em 2em !important;text-transform: uppercase !important;"
+								type="button" class="btn btn-success">Gerar</button>
+								</div>
 							</form>
 							
 							
 
-							<button style="margin-top: 1em !important;border: none !important;padding: .5em 2em !important;text-transform: uppercase !important;"
-								type="button" class="btn btn-success">Gerar</button>
+							
 						</div>
 					</div>
 					<div class="jumbotron col-lg-9 defesas-detalhe" style="box-sizing:border-box !important; background-color: #eceff5 !important;padding: 2em 1em !important;border-radius: 5px !important;width: 100% !important;">
