--- a/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
@@ -191,13 +191,13 @@
 								<button type="submit" class="btn btn-lg btn-success">Confirmar</button>
 							</div>
 						</div>
-						
+						</form>
 						<!--  MODAL -->
 						<div class="modal fade" id="confirmacaoModal" tabindex="-1" role="dialog" aria-labelledby="confirmacaoModalLabel" aria-hidden="true">
 						  <div class="modal-dialog" role="document">
 						    <div class="modal-content">
 						      <div class="modal-header">
-						        <h5 class="modal-title" id="confirmacaoModalLabel">Exclusão de produto</h5>
+						        <h5 class="modal-title" id="confirmacaoModalLabel">Exclusão de defesa</h5>
 						        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						          <span aria-hidden="true">&times;</span>
 						        </button>
@@ -213,10 +213,22 @@
 						    </div>
 						  </div>
 						</div>
-					</form>
+						<script th:inline="javascript">
+								/*<![CDATA[*/
+									window.onload = function() {
+										var agendamentoID = 0;
+								    	$('#excluir').on('click', function(){
+								    		agendamentoID = $(this).val();
+								    	});
+								    	$('#confirmacaoModal').on('show.bs.modal', function (e) {
+								            $(this).find('#excluirModal').attr('href', agendamentoID + '/remover/' + agendamentoID);
+								        });
+									};
+								/*]]>*/
+							</script>
+					
 					</div>
 				</div>
-			<div id="push"></div>
 		</div>
 		</div>
 	</section>
