--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -260,38 +260,35 @@
 	         
 						<div class="pdf" style='background-color: #eceff5; padding: 1em;border-radius: 5px !important;text-align: center !important;'>
 							<h5 style="text-align: left !important;">Gerar PDF</h5>
-							<form action="" style="text-align: left !important;padding: 0 .5em !important;">
-								
-							<div class="form-group offset-md-2 offset-sm-1">
-							<div class="form-check row">
-								<input class="form-check-input" type="radio" name="options"
-									id="edital" value="1"> <label
-									class="form-check-label" for="avaliacao1"> Edital de defesa
-								</label>
-							</div>
-							<div class="form-check row">
-								<input class="form-check-input" type="radio" name="options"
-									id="ataDefesa" value="2"> 
-									<label class="form-check-label" for="avaliacao2"> Ata de defesa</label>
-									
-							</div>
-						</div>
-						<select style="margin: 0 1em !important; width: 85%;" name="select" id="selectAta"
-									aria-placeholder="Todos" disabled>
-									<option value="0">Todas</option>
-									<option th:each="agendamento : ${agendamentos}" 
-										th:value="${agendamento.id}"
-										th:text="${agendamento.fichaIdentificacao.aluno.nome}"></option>
-								</select>
-								<div style='padding: 1em;border-radius: 5px !important;text-align: center !important;'> 
-								<button style="margin-top: 1em !important;border: none !important;padding: .5em 2em !important;text-transform: uppercase !important;"
-								type="button" class="btn btn-success">Gerar</button>
-								</div>
-							</form>
-							
-							
-
-							
+							<form th:object="${agendamento}" th:action="@{/gtcc/agendamentodefesa/gerar/}"
+				                method="POST" style="text-align: left !important;padding: 0 .5em !important;">
+				                
+				              <div class="form-group offset-md-2 offset-sm-1">
+				              <div class="form-check row">
+				                <input class="form-check-input" type="radio" name="options"
+				                  id="edital" value="1"> <label
+				                  class="form-check-label" for="avaliacao1"> Edital de defesa</label>
+				              </div>
+				              <div class="form-check row">
+				                <input class="form-check-input" type="radio" name="options"
+				                  id="ataDefesa" value="2"> 
+				                  <label class="form-check-label" for="avaliacao2"> Ata de defesa</label>
+				                  
+				              </div>
+				            </div>
+				                <select style="margin: 0 1em !important; width: 85%;" name="select" id="selectAta"
+				                  aria-placeholder="Todos" disabled>
+				                  <option value="0">Todas</option>
+				                  <option th:each="agendamento : ${agendamentos}" 
+				                    th:value="${agendamento.id}"
+				                    th:text="${agendamento.fichaIdentificacao.aluno.nome}"></option>
+				                </select>
+				                
+				                <div style='padding: 1em;border-radius: 5px !important;text-align: center !important;'> 
+				                        <button style="margin-top: 1em !important;border: none !important;padding: .5em 2em !important;text-transform: uppercase !important;"
+				                        type="submit" class="btn btn-success">Gerar</button>
+				                        </div>
+				              </form>
 						</div>
 					</div>
 					<div class="jumbotron col-lg-9 defesas-detalhe" style="box-sizing:border-box !important; background-color: #eceff5 !important;padding: 2em 1em !important;border-radius: 5px !important;width: 100% !important;">
