Feat: Consulta critério de avaliacao

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -101,6 +101,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarAdmin">
                             <a class="dropdown-item" th:href="@{/gtcc/criterioavaliacao/cadastrar}" >Cadastrar</a>
+                            <a class="dropdown-item" th:href="@{/gtcc/criterioavaliacao/consultar}" >Consultar</a>
                         </div> 
                     </li>
                     <li 
