--- a/src/main/resources/templates/proposta/proposta.html
+++ b/src/main/resources/templates/proposta/proposta.html
@@ -100,7 +100,7 @@
 			window.onload = function(){
 		        if([[${param.sucesso}]]=="true"){
 		  			alertify.success('Proposta gerada com sucesso!');
-		        }else{
+		        }else if([[${param.sucesso}]]=="false"){
 		        	if([[${param.tipo}]]=="1"){
 		        		alertify.error('Coordenador não cadastrado!');
 		        	}else if([[${param.tipo}]]=="2"){
